@@ -4,24 +4,25 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>gr2111</groupId>
+		<groupId>gr2111.salarychecker</groupId>
 		<artifactId>salary-checker</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>salary-restserver</artifactId>
+    <packaging>jar</packaging>
 
 	<dependencies>
 
 		<dependency>
-			<groupId>gr2111</groupId>
+			<groupId>gr2111.salarychecker</groupId>
 			<artifactId>salary-core</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
-			<groupId>gr2111</groupId>
+			<groupId>gr2111.salarychecker</groupId>
 			<artifactId>salary-json</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
@@ -78,6 +79,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                    @{jaCoCoArgLine} --add-opens salarychecker.restserver/salarychecker.restserver=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
 
             <!-- Checkstyle  -->
@@ -96,6 +102,9 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
+                <configuration>
+                    <propertyName>jaCoCoArgLine</propertyName>
+                </configuration>
             </plugin>
 
 			<!-- Spring-boot -->
